# cnegng

./: .gitignore  Dockerfile.sphinxdocs  README.md  build_documentation.sh  conf.py  generate_docs.sh  index.rst  pyproject.toml  reformat_code.sh  requirements.txt  run_pylint.sh  run_tests.sh
benchmarks/: dict_lookups_benchmark.py  memoize_benchmarks.py
docs/: ACME.events.rst  ACME.rst  ACME.spatial2d.rst  ACME.stats.rst  api.rst  basic_stats.rst  conf.py  event_handling.rst  generation_one.rst  index.rst  loot_tables.rst  modules.rst
nginx/: nginx.conf
spike/: shape_xp.py  shape_xp_grid.py
src/cnegng/: main.py
src/cnegng/ACME/: __init__.py  basic_stats.py  game_handler.py  loot_table.py  pygame_event_handler.py  timed_event_handler.py
src/cnegng/ACME/events/: event_bus.py  exceptions.py  key_event_handler.py  pygame_event_handler.py  timed_event_handler.py
src/cnegng/ACME/spatial2d/: __init__.py  adapter.py  area.py  basic_types.py  cell.py  circle.py  coordinates.py  grid.py  (+4 more)
src/cnegng/generations/: one.py
tests/: test_main.py
tests/ACME/: test_basic_stats.py  test_game_handler.py  test_loot_table.py  test_pygame_event_handler.py  test_timed_event_handler.py
tests/ACME/spatial2d/: test_area.py  test_cell.py  test_dimensions.py  test_grid.py  test_grid_cell.py  test_grid_object_container.py  test_motion.py  test_position.py
tests/ACME/stats/: test_attribute_modifier.py  test_basic_stats.py  test_item_with_modifiers.py  test_player.py  test_player_wearing_stats.py
tests/generation/one/: test_gearset.py
tests/generation/two/: test_log_widget.py
(+40 files in other folders)
